--- a/htdocs/_docs/modules/units/index.html
+++ b/htdocs/_docs/modules/units/index.html
@@ -288,7 +288,7 @@
 <h3>1/2画像右回り込み</h3>
 <div class="unit float_image">
 	<div class="float_image-r50per">
-		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
+		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -309,22 +309,11 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
 	&lt;div class=&quot;float_image-r50per&quot;&gt;
-		&lt;p class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;XXXX&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;
+		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
 		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_image-body&quot;&gt;
-		&lt;p&gt;
-			ここは本文ブロックです。このサンプルは、半分の幅で右に回りこむ画像をレイアウトするものです。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
+		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
 &lt;/div&gt;&lt;!-- /.float_image --&gt;
 </textarea></div>
@@ -333,7 +322,7 @@
 <h3>1/3画像右回り込み</h3>
 <div class="unit float_image">
 	<div class="float_image-r33per">
-		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
+		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -354,22 +343,11 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
 	&lt;div class=&quot;float_image-r33per&quot;&gt;
-		&lt;p class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;XXXX&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;
+		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
 		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_image-body&quot;&gt;
-		&lt;p&gt;
-			ここは本文ブロックです。このサンプルは、33%の幅で右に回りこむ画像をレイアウトするものです。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
+		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
 &lt;/div&gt;&lt;!-- /.float_image --&gt;
 </textarea></div>
@@ -378,7 +356,7 @@
 <h3>1/4画像右回り込み</h3>
 <div class="unit float_image">
 	<div class="float_image-r25per">
-		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
+		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -399,22 +377,11 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
 	&lt;div class=&quot;float_image-r25per&quot;&gt;
-		&lt;p class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;XXXX&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;
+		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
 		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_image-body&quot;&gt;
-		&lt;p&gt;
-			ここは本文ブロックです。このサンプルは、25%の幅で右に回りこむ画像をレイアウトするものです。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
+		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
 &lt;/div&gt;&lt;!-- /.float_image --&gt;
 </textarea></div>
@@ -423,7 +390,7 @@
 <h3>1/2画像左回り込み</h3>
 <div class="unit float_image">
 	<div class="float_image-l50per">
-		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
+		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -444,22 +411,11 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
 	&lt;div class=&quot;float_image-l50per&quot;&gt;
-		&lt;p class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;XXXX&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;
+		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
 		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_image-body&quot;&gt;
-		&lt;p&gt;
-			ここは本文ブロックです。このサンプルは、半分の幅で左に回りこむ画像をレイアウトするものです。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
+		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
 &lt;/div&gt;&lt;!-- /.float_image --&gt;
 </textarea></div>
@@ -468,7 +424,7 @@
 <h3>1/3画像左回り込み</h3>
 <div class="unit float_image">
 	<div class="float_image-l33per">
-		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
+		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -489,22 +445,11 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
 	&lt;div class=&quot;float_image-l33per&quot;&gt;
-		&lt;p class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;XXXX&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;
+		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
 		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_image-body&quot;&gt;
-		&lt;p&gt;
-			ここは本文ブロックです。このサンプルは、33%の幅で左に回りこむ画像をレイアウトするものです。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
+		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
 &lt;/div&gt;&lt;!-- /.float_image --&gt;
 </textarea></div>
@@ -513,7 +458,7 @@
 <h3>1/4画像左回り込み</h3>
 <div class="unit float_image">
 	<div class="float_image-l25per">
-		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
+		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -534,22 +479,11 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
 	&lt;div class=&quot;float_image-l25per&quot;&gt;
-		&lt;p class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;XXXX&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;
+		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
 		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_image-body&quot;&gt;
-		&lt;p&gt;
-			ここは本文ブロックです。このサンプルは、25%の幅で左に回りこむ画像をレイアウトするものです。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
+		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
 &lt;/div&gt;&lt;!-- /.float_image --&gt;
 </textarea></div>
@@ -559,7 +493,7 @@
 <h3>本文部分を矩形に保つ</h3>
 <div class="unit float_image">
 	<div class="float_image-l25per">
-		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
+		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body_rect">
@@ -580,22 +514,11 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
 	&lt;div class=&quot;float_image-l25per&quot;&gt;
-		&lt;p class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;XXXX&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;
+		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
 		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_image-body_rect&quot;&gt;
-		&lt;p&gt;
-			ここは本文ブロックです。このサンプルは、25%の幅で左に回りこむ画像をレイアウトするものです。本文部分を矩形に保ちたい場合(画像を回り込ませたくない場合)は、ボディ部分の暮らすを、 .float_image-body から .float_image-body_rect に変更します。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
-		&lt;p&gt;
-			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。&lt;br /&gt;
-		&lt;/p&gt;
+		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
 &lt;/div&gt;&lt;!-- /.float_image --&gt;
 </textarea></div>
@@ -605,6 +528,7 @@
 
 
 <h2>サムネイルリスト .thumb_list (策定中)</h2>
+<p>【課題】:nth-child()が使えないブラウザ(～IE8)に対しては、どのように対応するべきか？</p>
 <?php ob_start(); ?>
 <style type="text/css">
 /**
@@ -675,6 +599,7 @@
 
 
 <h2>ページャー .pager (策定中)</h2>
+<p>【課題】一般的に、スマートフォン向けのUIデザインに求められる要求を満たすことができるか？</p>
 <?php ob_start(); ?>
 <style type="text/css">
 /**
@@ -770,33 +695,14 @@
 
 
 
-<h2>フォーム (策定中)</h2>
+<h2>フォーム .form_buttons</h2>
 <p>
 	フォームエレメント系のモジュールは、パーツモジュールとして設計されています。<br />
 	<a href="../parts/">パーツモジュールのページ</a>を参照してください。<br />
 </p>
 
-<h3>送信系ボタン</h3>
 
-<?php ob_start(); ?>
-<style type="text/css">
-/**
- * [unit] フォーム送信ボタン
- */
-.form_buttons {
-	position:relative;
-	text-align:center;
-}
-.form_buttons ul ,
-.form_buttons ul li{
-	margin:0; padding:0;
-	list-style-type:none;
-}
-.form_buttons ul li.form_buttons-revise{
-	position:absolute; right:0px; bottom:0px;
-}
-</style>
-<?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
+<h3>送信系ボタン</h3>
 
 <form action="#" method="post">
 <div class="unit form_buttons">
@@ -849,5 +755,29 @@
 </textarea></div>
 </div><!-- /.unit -->
 </form>
+
+
+<h2>エラー通知ボックス .form_error_box</h2>
+<p>
+	主に、入力エラーを検出したフォーム画面の先頭で、エラー内容をユーザーへ通知する目的で使用することを想定したものです。<br />
+</p>
+<div class="unit form_error_box">
+	<p>次のエラーがありました。</p>
+	<ul>
+		<li><a href="#cont_onamae">お名前を入力してください。</a></li>
+		<li>パスワードは8文字以上で入力してください。</li>
+	</ul>
+</div><!-- /.form_error_box -->
+
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit form_error_box&quot;&gt;
+	&lt;p&gt;次のエラーがありました。&lt;/p&gt;
+	&lt;ul&gt;
+		&lt;li&gt;&lt;a href=&quot;#cont_onamae&quot;&gt;お名前を入力してください。&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;パスワードは8文字以上で入力してください。&lt;/li&gt;
+	&lt;/ul&gt;
+&lt;/div&gt;&lt;!-- /.form_error_box --&gt;
+</textarea></div>
+</div><!-- /.unit -->
 
 
