PX=api にいくつかの拡張と変更。 - api.get を追加。 api.get.config, api.get.sitemap, api.get.sitemap_definition をとりあえず追加した。追ってコンテンツやテーマに関するAPIも追加する予定。 - apiの返却値の形式を、typeパラメータで選択できるようにした。XML, JSON, JSONP に対応。 - JSONP の場合、callbackパラメータでコールバック関数名を指定できるようにした。デフォルトの関数名は "callback"。 - 形式のデフォルトを XML とした。(もとはJSON1択だった) - t::data2xml() を追加。

--- a/htdocs/_docs/test/pxcommandlist.html
+++ b/htdocs/_docs/test/pxcommandlist.html
@@ -37,16 +37,27 @@
 		<dd>サイトマップディレクトリ内の任意のファイルをアップロードする。対象とするファイルのパスは、pathパラメータに指示する。</dd>
 	<dt>api.ulfile.theme.(テーマID)</dt>
 		<dd>指定のテーマIDのディレクトリ内の任意のファイルをアップロードする。対象とするファイルのパスは、pathパラメータに指示する。</dd>
+
+	<dt>api.get.config</dt>
+		<dd>PxFWが読み込んだコンフィグの内容を返す。</dd>
+	<dt>api.get.sitemap</dt>
+		<dd>サイトマップ配列全体を返す。</dd>
+	<dt>api.get.sitemap_definition</dt>
+		<dd>サイトマップ定義を返す。</dd>
 </dl>
 
 <p>
-	アップロード(ulfile)時、ダウンロード(dlfile)時のパラメータは下記のように共通です。<br />
+	下記のパラメータを併用することができます。<br />
 </p>
 <dl>
 	<dt>bin</dt>
-		<dd>アップロードするファイルの内容。アップロード時のみ。</dd>
+		<dd>アップロードするファイルの内容。api.ulfileでのみ使用可能。</dd>
 	<dt>path</dt>
-		<dd>アップロードするファイルのパス。コンテンツやサイトマップなど、複数のファイルや階層の概念を持った対象の場合に付加します。</dd>
+		<dd>アップロードするファイルのパス。コンテンツやサイトマップなど、複数のファイルや階層の概念を持った対象の場合に付加する。content, sitemap, theme をアップロードまたはダウンロードする場合に使用。</dd>
+	<dt>type</dt>
+		<dd>形式をXML(デフォルト), JSON, JSONP の中から指定します。api.dlfile 以外で使用可能。</dd>
+	<dt>callback</dt>
+		<dd>JSONPのコールバック関数名を指定する。デフォルトは <code>callback</code>。typeにJSONPを指定した場合に使用可能。</dd>
 </dl>
 
 
