サイトマップの authlevel の処理を実装。他。 - ダイナミックパスのマッチングの順番をソートするようにした。 - プリセットされたコンテンツを整理中。 - $px に、 Not found ページを出力するメソッドを追加。

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,18 +13,33 @@
 <?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
 
 
-<h2>Welcome to Pickles Framework 1.x!!</h2>
-<p>これは、Pickles Framework のトップページです。</p>
-<ul>
-	<li><a href="./_docs/test/">./test/</a></li>
-	<li><a href="./_docs/test/abc.html">./test/abc.html</a></li>
-</ul>
-
+<h2>Pickles Framework へようこそ！</h2>
 <p>
-	Pickles Framework 1.x 系 標準のCSSモジュール定義については、次のページを参照してください。<br />
+	これは、Pickles Framework のトップページです。<br />
+</p>
+
+<h2>デモファイル</h2>
+<p>
+	次のファイルは、デモ用のサンプルやテストコードを格納しています。制作を始めるにあたり、削除してください。<br />
 </p>
 <ul>
-	<li><a href="./_docs/modules/">Pickles Framework 1.x 系 標準 CSSモジュール定義</a></li>
+	<li>./_docs/test/*</li>
+	<li>./_PX/sitemaps/_docs_test.csv</li>
+</ul>
+<p>
+	次のファイルは、Pickles Framework 標準のコーディング規則、CSSモジュールの定義とテンプレート集、有用な機能やAPIの一覧、実装ルールなどのドキュメントを提供しています。コーディング規則やCSS実装の確認用として利用できますが、不要な場合削除しても大丈夫です。<br />
+</p>
+<ul>
+	<li>./_docs/*</li>
+	<li>./_PX/sitemaps/_docs.csv</li>
+</ul>
+
+<h2>コーディング規則</h2>
+<p>
+	Pickles Framework のドキュメントを参照するには、次のページを参照してください。コーディング規則やCSSモジュール定義などが含まれています。<br />
+</p>
+<ul>
+	<li><a href="./_docs/">Pickles Framework ドキュメント</a></li>
 </ul>
 
 
