PX=api に ls コマンドを追加。

--- a/htdocs/_docs/pxcommand_list/index.html
+++ b/htdocs/_docs/pxcommand_list/index.html
@@ -36,6 +36,13 @@
 	<dt>api.ulfile.theme.(テーマID)</dt>
 		<dd>指定のテーマIDのディレクトリ内の任意のファイルをアップロードする。対象とするファイルのパスは、pathパラメータに指示する。</dd>
 
+	<dt>api.ls.content</dt>
+		<dd>コンテンツディレクトリ内の任意のパスに格納されたファイルの一覧をダウンロードする。対象とするファイルのパスは、pathパラメータに指示する。ただし、_PXディレクトリ、/_px_execute.php, /.htaccess は一覧から取得することはできない。</dd>
+	<dt>api.ls.sitemap</dt>
+		<dd>サイトマップディレクトリ内の任意のパスに格納されたファイルの一覧をダウンロードする。対象とするファイルのパスは、pathパラメータに指示する。</dd>
+	<dt>api.ls.theme.(テーマID)</dt>
+		<dd>指定のテーマIDのディレクトリ内の任意のパスに格納されたファイルの一覧をダウンロードする。対象とするファイルのパスは、pathパラメータに指示する。</dd>
+
 	<dt>api.delete.content</dt>
 		<dd>コンテンツディレクトリ内の任意のファイルやディレクトリを削除する。対象とするファイルのパスは、pathパラメータに指示する。</dd>
 	<dt>api.delete.sitemap</dt>
