--- a/htdocs/_PX/themes/sample/plain.html
+++ b/htdocs/_PX/themes/sample/plain.html
@@ -1,12 +1,20 @@
 <?php
+	//↓ $page_info にページの情報を格納しています。
+	//	 test::var_dump( $page_info ); で、変数の内容を確認できます。
 	$page_info = $this->px->site()->get_current_page_info();
 ?><!doctype html>
 <html>
 <head>
 <meta charset="UTF-8" />
+<?php /*
+↓ t::h() は、htmlspecialchars() のショートカットです。
+*/ ?>
 <title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
 <?php
 	include( $px->get_theme_resource_dir_realpath().'inc/setup.inc' );
+
+	//↓コンテンツから受け取った
+	//	headセクション内用のソースを出力しています。
 	print $px->theme()->pull_content('head');
 ?>
 </head>
