--- a/htdocs/_PX/themes/default/popup.html
+++ b/htdocs/_PX/themes/default/popup.html
@@ -1,18 +1,25 @@
 <?php
+	//↓ $page_info にページの情報を格納しています。
+	//	 test::var_dump( $page_info ); で、変数の内容を確認できます。
 	$page_info = $this->px->site()->get_current_page_info();
 ?><!doctype html>
 <html>
 	<head>
 		<meta charset="UTF-8" />
+<?php /*
+↓ t::h() は、htmlspecialchars() のショートカットです。
+*/ ?>
 		<title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
 		<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
 		<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
-		<script src="<?php print t::h($px->get_install_path()); ?>common/js/jquery-1.7.2.min.js" type="text/javascript"></script>
+		<script src="<?php print t::h($px->theme()->href('/common/js/jquery-1.7.2.min.js')); ?>" type="text/javascript"></script>
 <?php
-	print $px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')));
+	print $px->ssi($px->theme()->href('/common/inc/common_setup.inc'));
 ?>
-		<link rel="stylesheet" href="<?php print t::h($px->get_install_path()); ?>common/css/common.css" type="text/css" />
+		<link rel="stylesheet" href="<?php print t::h($px->theme()->href('/common/css/common.css')); ?>" type="text/css" />
 <?php
+	//↓コンテンツから受け取った
+	//	headセクション内用のソースを出力しています。
 	print $px->theme()->pull_content('head');
 ?>
 	</head>
@@ -27,6 +34,8 @@
 					<div id="content" class="contents">
 
 <?php
+	//↓コンテンツから受け取った
+	//	コンテンツエリアのソースを出力しています。
 	print $px->theme()->pull_content();
 ?>
 
